--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
             <div class="row">
 
                 <div class="col-lg-6 col-12">
-                    <h2 class="text-white mb-lg-0">Festava Live</h2>
+                    <h2 class="text-white mb-lg-0">Rureri Traders</h2>
                 </div>
 
                 <div class="col-lg-6 col-12 d-flex justify-content-lg-end align-items-center">
@@ -17,27 +17,15 @@
 
                         <li class="social-icon-item">
                             <a href="#" class="social-icon-link">
-                                <span class="bi-apple"></span>
-                            </a>
-                        </li>
-
-                        <li class="social-icon-item">
-                            <a href="#" class="social-icon-link">
                                 <span class="bi-instagram"></span>
                             </a>
                         </li>
-
                         <li class="social-icon-item">
                             <a href="#" class="social-icon-link">
-                                <span class="bi-youtube"></span>
+                                <span class="bi-facebook"></span>
                             </a>
                         </li>
-
-                        <li class="social-icon-item">
-                            <a href="#" class="social-icon-link">
-                                <span class="bi-pinterest"></span>
-                            </a>
-                        </li>
+                        {% comment %} <i class="bi bi-facebook"></i> {% endcomment %}
                     </ul>
                 </div>
             </div>
@@ -59,21 +47,6 @@
                         <a href="#" class="site-footer-link">About</a>
                     </li>
 
-                    <li class="site-footer-link-item">
-                        <a href="#" class="site-footer-link">Artists</a>
-                    </li>
-
-                    <li class="site-footer-link-item">
-                        <a href="#" class="site-footer-link">Schedule</a>
-                    </li>
-
-                    <li class="site-footer-link-item">
-                        <a href="#" class="site-footer-link">Pricing</a>
-                    </li>
-
-                    <li class="site-footer-link-item">
-                        <a href="#" class="site-footer-link">Contact</a>
-                    </li>
                 </ul>
             </div>
 
@@ -81,14 +54,14 @@
                 <h5 class="site-footer-title mb-3">Have a question?</h5>
 
                 <p class="text-white d-flex mb-1">
-                    <a href="tel: 090-080-0760" class="site-footer-link">
-                        090-080-0760
+                    <a href="tel: +254-748-373-873" class="site-footer-link">
+                        +254 748 373 873
                     </a>
                 </p>
 
                 <p class="text-white d-flex">
-                    <a href="mailto:hello@company.com" class="site-footer-link">
-                        hello@company.com
+                    <a href="mailto:wahome4jeff@gmail.com" class="site-footer-link">
+                        wahome4jeff@gmail.com
                     </a>
                 </p>
             </div>
@@ -97,7 +70,7 @@
                 <h5 class="site-footer-title mb-3">Location</h5>
 
                 <p class="text-white d-flex mt-3 mb-2">
-                    Silang Junction South, Tagaytay, Cavite, Philippines</p>
+                    Juja, Kiambu, Kenya</p>
 
                 <a class="link-fx-1 color-contrast-higher mt-3" href="#">
                     <span>Our Maps</span>
@@ -118,8 +91,8 @@
             <div class="row">
 
                 <div class="col-lg-3 col-12 mt-5">
-                    <p class="copyright-text">Copyright © 2036 Festava Live Company</p>
-                    <p class="copyright-text">Distributed by: <a href="https://themewagon.com">ThemeWagon</a></p>
+                    <p class="copyright-text">Copyright © 2023 Rureri Traders</p>
+                    <p class="copyright-text">Developed by: <a href="">WahomezTech</a></p>
                 </div>
 
                 <div class="col-lg-8 col-12 mt-lg-5">
