--- a/templates/base.html
+++ b/templates/base.html
@@ -45,11 +45,34 @@ https://templatemo.com/tm-583-festava-live
                     <p class="d-flex me-4 mb-0">
                         <i class="bi-person custom-icon me-2"></i>
                         <strong class="text-dark">Welcome to our store</strong>
+                        
+
                     </p>
+                    
                 </div>
+                
 
             </div>
         </div>
+        <script type="text/javascript">
+            var user = '{{request.user}}'
+            function getToken(name) {
+                var cookieValue = null;
+                if (document.cookie && document.cookie !== '') {
+                    var cookies = document.cookie.split(';');
+                    for (var i = 0; i < cookies.length; i++) {
+                        var cookie = cookies[i].trim();
+                        // Does this cookie string begin with the name we want?
+                        if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                            break;
+                        }
+                    }
+                }
+                return cookieValue;
+            }
+            var csrftoken = getToken('csrftoken');
+        </script>
     </header>
     
     {% block content %}
@@ -68,6 +91,7 @@ T e m p l a t e M o
     <script src="{% static 'js/jquery.sticky.js' %}"></script>
     <script src="{% static 'js/click-scroll.js' %}"></script>
     <script src="{% static 'js/custom.js' %}"></script>
+    <script src="{% static 'js/cart.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     
 
