--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,9 +17,7 @@
                                     {{field}}
                                 </div>
                             {% endfor %}
-                            <button type="submit" class="btn btn-primary">Register</button>
-                            <p class="text-center mb-4">Already have an account?</p>
-                            <center><a href="{% url 'login' %}" type="button" class="btn btn-outline-primary">Login</a></center> 
+                            <button type="submit" class="btn btn-primary">Update Profile</button>
                           </form>
                           
                     </div>
