--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     <title>Rureri Traders</title>
 
     <!-- CSS FILES -->
+    <!-- CSS FILES -->
+    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
@@ -44,7 +47,12 @@ https://templatemo.com/tm-583-festava-live
                 <div class="col-lg-12 col-12 d-flex flex-wrap">
                     <p class="d-flex me-4 mb-0">
                         <i class="bi-person custom-icon me-2"></i>
-                        <strong class="text-dark">Welcome to our store</strong>
+                        {% if user.is_authenticated %}
+                            <strong class="text-dark">Your predicted refill is on {{user.profile.updated}}</strong>
+                        {% else %}
+                            <strong class="text-dark">Get effecient premium services at convenient non-premium cost</strong>
+                        {% endif %}
+                        
                         
 
                     </p>
@@ -54,25 +62,6 @@ https://templatemo.com/tm-583-festava-live
 
             </div>
         </div>
-        <script type="text/javascript">
-            var user = '{{request.user}}'
-            function getToken(name) {
-                var cookieValue = null;
-                if (document.cookie && document.cookie !== '') {
-                    var cookies = document.cookie.split(';');
-                    for (var i = 0; i < cookies.length; i++) {
-                        var cookie = cookies[i].trim();
-                        // Does this cookie string begin with the name we want?
-                        if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                            break;
-                        }
-                    }
-                }
-                return cookieValue;
-            }
-            var csrftoken = getToken('csrftoken');
-        </script>
     </header>
     
     {% block content %}
@@ -91,7 +80,6 @@ T e m p l a t e M o
     <script src="{% static 'js/jquery.sticky.js' %}"></script>
     <script src="{% static 'js/click-scroll.js' %}"></script>
     <script src="{% static 'js/custom.js' %}"></script>
-    <script src="{% static 'js/cart.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     
 
