--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,101 +2,71 @@
 {% block content %}
 {% load static %}
 <main>
-    <section class="hero-section" id="section_1">
-        <div class="section-overlay"></div>
-        </div>
+    <section class="ticket-section section-padding">
+       <div class="section-overlay"></div>
 
-        <div class="video-wrap">
-            <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                <source src="{% static 'video/background.mp4' %}" type="video/mp4"> 
-
-                Your browser does not support the video tag.
-            </video>
-        </div>
-    </section>
-    <section class="contact-section section-padding" id="section_6">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-lg-8 col-12 mx-auto">
-                        <h2 class="text-center mb-4">Cart Page</h2>
-
-                        {% comment %} <nav class="d-flex justify-content-center">
-                            <div class="nav nav-tabs align-items-baseline justify-content-center" id="nav-tab"
-                                role="tablist">
-                                <button class="nav-link active" id="nav-ContactForm-tab" data-bs-toggle="tab"
-                                    data-bs-target="#nav-ContactForm" type="button" role="tab"
-                                    aria-controls="nav-ContactForm" aria-selected="false">
-                                    <h5>Contact Form</h5>
-                                </button>
-
-                                <button class="nav-link" id="nav-ContactMap-tab" data-bs-toggle="tab"
-                                    data-bs-target="#nav-ContactMap" type="button" role="tab"
-                                    aria-controls="nav-ContactMap" aria-selected="false">
-                                    <h5>Google Maps</h5>
-                                </button>
-                            </div>
-                        </nav> {% endcomment %}
-
-                        <div class="tab-content shadow-lg mt-5" id="nav-tabContent">
-                            <div class="tab-pane fade show active" id="nav-ContactForm" role="tabpanel"
-                                aria-labelledby="nav-ContactForm-tab">
-                                <a class="btn btn-outline-dark" href="{% url 'home' %}">&#x2190; Continue Shopping</a>
-
-                                <br>
-                                <br>
-                                <table class="table">
-                                    <tr>
-                                        <th><h5>Items: <strong>{{items.get_add_items}}</strong></h5></th>
-                                        <th><h5>Total:<strong> $42</strong></h5></th>
-                                        <th>
-                                            <a    style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Checkout</a>
-                                        </th>
-                                    </tr>
-                                </table>
-                                <br>
-                                <br>
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th><h6><strong>  </strong></h6></th>
-                                            <th><h6><strong>Item</strong></h6></th>
-                                            <th><h6><strong>Price</strong></h6></th>
-                                            <th><h6><strong>Quantity</strong></h6></th>
-                                            <th><h6><strong> Total</strong></h6></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    {% for order in orders  %}
-                                        <tr>
-                                            <th scope="row"><img class="thumbnail" src="{{order.product.pic.url}}" height="50" width="50"></th>
-                                            <td>{{order.product}}</td>
-                                            <td>${{order.product.price}}</td>
-                                            <td>{{order.quantity}}</td>
-                                            <td>${{order.get_total}}</td>
-                                        </tr>
-                                    {% endfor %}
-                                        
-                                    </tbody>
-                                    
-                                </table>
-
-                            
-                            </div>
-
-                            {% comment %} <div class="tab-pane fade" id="nav-ContactMap" role="tabpanel"
-                                aria-labelledby="nav-ContactMap-tab">
-                                <iframe class="google-map"
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29974.469402870927!2d120.94861466021855!3d14.106066818082482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd777b1ab54c8f%3A0x6ecc514451ce2be8!2sTagaytay%2C%20Cavite%2C%20Philippines!5e1!3m2!1sen!2smy!4v1670344209509!5m2!1sen!2smy"
-                                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                                <!-- You can easily copy the embed code from Google Maps -> Share -> Embed a map // -->
-                            </div> {% endcomment %}
+       <div class="container">
+            <div class="card text-bg-light mb-3">
+                    
+                <div class="card-body">
+                    <h4 class="text-center mb-4">Order History</h4>
+                    <div class="container">
+                        <div class="row row-cols-1 row-cols-md-3 g-4">
+                            {% if orders %}
+                            {% for order in orders  %}
+                                <div class="card text-bg-light mb-3">
+                                    <div class="card-header">
+                                        <h7><center><strong>Order ID :</strong> {{order.id}}</center></h7>
+                                      </div>
+                                      <div class="card-body">
+                                        <table class="table">     
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row">Product</th>
+                                                    <td>{{order.product.name}}</td>
+                                                </tr>
+                                            <tr>
+                                                <th scope="row">Quantity</th>
+                                                <td>{{order.quantity}}</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Price</th>
+                                                <td>{{order.product.price}}</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Order date</th>
+                                                <td>{{order.date_ordered}}</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Paid?</th>
+                                                <td>{{order.paid}}</td>
+                                            </tr>
+                                            
+                                            <tr>
+                                                <th scope="row">Status </th>
+                                                <td>Pending...</td>
+                                            </tr>
+                                            
+                                            
+                                            </tbody>
+                                            
+                                        </table>
+                                        <center><a href="{% url 'checkout' order.id %}" class="btn btn-outline-primary">Go To order</a></center>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                            {%else%}
+                            <h8><center>You have no previous orders. To make an order visit the <a href="{% url 'home' %}"><strong>Home</strong></a> page</center></h8>
+                            {% endif %}
                         </div>
                     </div>
-
+                    
+                    
                 </div>
             </div>
-        </section>
+        
+       </div>
+        </div>
+    </section>
 </main>
-{% endblock content %}
+{% endblock %}
