--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -11,31 +11,119 @@
                     <div class="col-lg-6 col-10 mx-auto">
                         <form class="custom-form ticket-form mb-5 mb-lg-0 row g-3" action="#" method="post" role="form">
                             <h2 class="text-center mb-4">Delivery Information</h2>
-
-                                <div class="col-md-6">
-                                  <label for="inputEmail4" class="form-label">Email</label>
-                                  <input type="email" class="form-control" id="inputEmail4">
+                                {% csrf_token %}
+                                <div class="row g-3">
+                                    <div class="col-sm-6">
+                                        <label for="firstName" class="form-label">First name</label>
+                                        <input type="text" class="form-control" name="firstName" placeholder="" value="" required>
+                                        <div class="invalid-feedback">
+                                            Valid first name is required.
+                                        </div>
+                                    </div>
+        
+                                    <div class="col-sm-6">
+                                        <label for="lastName" class="form-label">Last name</label>
+                                        <input type="text" class="form-control" name="lastName" placeholder="" value="" required>
+                                        <div class="invalid-feedback">
+                                            Valid last name is required.
+                                        </div>
+                                    </div>
+        
+                                    <!--<div class="col-12">
+                                        <label for="username" class="form-label">Username</label>
+                                        <div class="input-group has-validation">
+                                            <span class="input-group-text">@</span>
+                                            <input type="text" class="form-control" id="username" placeholder="Username" required>
+                                            <div class="invalid-feedback">
+                                                Your username is required.
+                                            </div>
+                                        </div>
+                                    </div>-->
+        
+                                    <div class="col-12">
+                                        <label  class="form-label">Email <span class="text-muted"></span></label>
+                                        <input class="form-control" name="email" value={{user.email}}>
+                                        <div class="invalid-feedback">
+                                            Please enter a valid email address
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <label class="form-label">Delivery Location <span class="text-muted"></span></label>
+                                        <input  class="form-control" name="email" value={{user.profile.location}}>
+                                        <div class="invalid-feedback">
+                                            Please enter a valid email address
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <label for="email" class="form-label">Contact Phone Number <span class="text-muted"></span></label>
+                                        <input type="email" class="form-control" name="email" value={{user.profile.mobile_number}}>
+                                        <div class="invalid-feedback">
+                                            Please enter a valid email address
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-md-6">
-                                  <label for="inputPassword4" class="form-label">Password</label>
-                                  <input type="password" class="form-control" id="inputPassword4">
+                                <div class="form-check">
+                                    {% if paid == True %}
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckCheckedDisabled" checked disabled>
+                                    {% else %}
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDisabled" disabled>
+                                    {% endif %}
+                                    
+                                    <label class="form-check-label" for="flexCheckDisabled">
+                                      Completed Payment
+                                    </label>
                                 </div>
-                                <div class="col-12">
-                                  <label for="inputAddress" class="form-label">Address</label>
-                                  <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        
+                                
+                                <hr class="my-4">
+                                
+        
+                                
+                            <!--</form> -->
+        
+                            
+                            <!--<form> -->
+                                <div class="row g-3">
+                                    
+                                    
+                                                            
+        
+                                
+        
+                                <h4 class="mb-3">Payment method:</h4>
+        
+                                <div class="row justify-content-center my-3 gy-3">
+                                    <div class="col-auto">
+                                        <a href="{% url "paypal-test" order_id %}" class="btn btn-outline-info" role="button" >Paypal</a>
+                                    </div>
+                                    {% comment %} <div class="col-auto">
+                                        <a class="btn btn-outline-info" role="button" data-bs-toggle="modal" data-bs-target="#stripeModal" >Visa/Mastercard</a>
+                                    </div>
+                                    <div class="col-auto">
+                                        <a class="btn btn-outline-info" role="button" data-bs-toggle="modal" data-bs-target="#pesapalModal" >Pesapal</a>
+                                    </div> {% endcomment %}
+                                    <div class="col-auto">
+                                        <!--<a class="btn btn-outline-info" role="button" href="#">M-Pesa</a>-->
+                                        <button type="button" class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#m-pesaModal">M-Pesa</button>
+                                    </div>
                                 </div>
-                                <div class="col-12">
-                                  <label for="inputAddress2" class="form-label">Address 2</label>
-                                  <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
                                 </div>
-                                <div class="col-lg-4 col-md-10 col-8 mx-auto">
-                                    <button type="submit" class="form-control">Continue</button>
-                                </div>
+                                
+                                <hr class="my-4">
+        
+                                {% if paid == True %}
+                                    <button class="w-100 btn btn-success btn-lg mb-5" type="submit">Complete Checkout</button>
+                                {% else %}
+                                    <button class="w-100 btn btn-success btn-lg mb-5" type="submit" disabled>Complete Checkout</button>
+                                    
+                                {% endif %}
+                                
+                                {% comment %} <button class="w-100 btn btn-success btn-lg mb-5" type="submit">Complete Checkout</button> {% endcomment %}
                         </form>
                     </div>
                     <div class="col-lg-6 col-10 mx-auto">
                         <form class="custom-form ticket-form mb-5 mb-lg-0" action="#" method="post" role="form">
-                            <a class="btn btn-outline-dark" href="">&#x2190; Back to Cart</a>
+                            <a class="btn btn-outline-dark" href="{%url "home" %}">&#x2190; Back to Home</a>
                             <br>
                             <br>
                             <h6>Order Summary</h6>
@@ -46,7 +134,6 @@
                                         <th scope="row"><img class="thumbnail" src="{{order.product.pic.url}}" height="50" width="50"></th>
                                         <td>{{order.product}}</td>
                                         <td>${{order.product.price}}</td>
-                                        <td>{{order.quantity}}</td>
                                         </th>
                                     </tr>
                                 {% endfor %}
@@ -54,9 +141,9 @@
                             </table>
                             <br>
                             
-                            <h6>Items: {{items.get_cart_total}} </h6>
+                            <h6>Items: {{quantity}}</h6>
                             
-                            <h6>Total: $42</h6>
+                            <h6>Total: ${{total}}</h6>
                         </form>
                     </div>
                 </div>
