--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -7,7 +7,41 @@
 
             <div class="container">
                 <div class="row">
-
+                    <!-- Modal -->
+                    <div class="modal fade" id="m-pesaModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Mpesa Payment</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <form method="POST" action="/stk-push/{{order_id}}/">
+                                <div class="modal-body">
+                                
+                                    {% csrf_token %}
+                                    <div class="mb-3">
+                                        <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text" id="basic-addon3">+254</span>
+                                            <input type="text" class="form-control" name="mobile" aria-describedby="basic-addon3" placeholder="712345678">
+                                        </div>
+                                        <div id="emailHelp" class="form-text">You will receive an M-Pesa pop-up on your phone. Please enter your M-Pesa pin to complete the transaction</div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label class="form-label">Amount</label>
+                                        <input class="form-control" type="text" aria-label="readonly input example" name="amount" value={{price}} readonly>
+                                        <div id="emailHelp" class="form-text">This is automatically generated from your checkout</div>
+                                    </div>                                      
+                                
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-outline-primary">Pay</button>
+                                </div>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
                     <div class="col-lg-6 col-10 mx-auto">
                         <form class="custom-form ticket-form mb-5 mb-lg-0 row g-3" action="#" method="post" role="form">
                             <h2 class="text-center mb-4">Delivery Information</h2>
