--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 
     <link href="{% static 'css/templatemo-festava-live.css' %}" rel="stylesheet"> 
 
-    
+    {% block extend_header %}{% endblock extend_header %}
 
     <!--
 
