--- a/templates/footer.html
+++ b/templates/footer.html
@@ -72,7 +72,7 @@
                 <p class="text-white d-flex mt-3 mb-2">
                     Juja, Kiambu, Kenya</p>
 
-                <a class="link-fx-1 color-contrast-higher mt-3" href="#">
+                <a class="link-fx-1 color-contrast-higher mt-3" href="{% url 'map' %}">
                     <span>Our Maps</span>
                     <svg class="icon" viewBox="0 0 32 32" aria-hidden="true">
                         <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
