--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="{% url 'home' %}">
             <span>Rureri</span> Traders
         </a>
         <link rel="icon" type="image/x-icon" href="{% static 'images/RT-logo.jpg' %}"> 
@@ -40,7 +40,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="">About</a>
+                    <a class="nav-link click-scroll" href="#section_2">About</a>
                 </li>
                 <li class="nav-item">
                     <form class="d-flex" role="search">
@@ -48,6 +48,10 @@
                         <button class="btn btn-outline-light" type="submit">Search</button>
                     </form>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link click-scroll" href="#section_6">Contact</a>
+                </li>
+                
                 
 
                 {% comment %} <li class="nav-item">
